// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangeLanguageOnWebsiteHeader /> should render correctly 1`] = `
<ContextProvider
  value={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": undefined,
    }
  }
>
  <ForwardRef
    defaultLanguage="en-GB"
    languageList={
      Array [
        Object {
          "code": "fr-FR",
          "translationKey": "french",
        },
        Object {
          "code": "en-GB",
          "translationKey": "english",
        },
        Object {
          "code": "sp-SP",
          "translationKey": "spanish",
        },
        Object {
          "code": "de-DE",
          "translationKey": "deutsch",
        },
      ]
    }
    localeChoiceTranslations={
      Array [
        Object {
          "code": "de-DE",
          "label": "Weiter",
          "message": "Möchten Sie die Seite in Ihrer Sprache anzeigen?",
        },
        Object {
          "code": "en-GB",
          "label": "Continue",
          "message": "Do you want to consult the website in your language?",
        },
        Object {
          "code": "fr-FR",
          "label": "Continuer",
          "message": "Voulez-vous consulter le site dans votre langue ?",
        },
      ]
    }
    onChange={[MockFunction]}
    onClose={[MockFunction]}
  />
</ContextProvider>
`;

exports[`<ChangeLanguageOnWebsiteHeader /> should return null with a wrong defaultLanguage 1`] = `
<ForwardRef
  defaultLanguage="Dothraki"
  languageList={
    Array [
      Object {
        "code": "fr-FR",
        "translationKey": "french",
      },
      Object {
        "code": "en-GB",
        "translationKey": "english",
      },
      Object {
        "code": "sp-SP",
        "translationKey": "spanish",
      },
      Object {
        "code": "de-DE",
        "translationKey": "deutsch",
      },
    ]
  }
  localeChoiceTranslations={
    Array [
      Object {
        "code": "de-DE",
        "label": "Weiter",
        "message": "Möchten Sie die Seite in Ihrer Sprache anzeigen?",
      },
      Object {
        "code": "en-GB",
        "label": "Continue",
        "message": "Do you want to consult the website in your language?",
      },
      Object {
        "code": "fr-FR",
        "label": "Continuer",
        "message": "Voulez-vous consulter le site dans votre langue ?",
      },
    ]
  }
  onChange={[MockFunction]}
  onClose={[MockFunction]}
/>
`;
